--- a/parser/pom.xml
+++ b/parser/pom.xml
@@ -22,14 +22,12 @@
             <scope>provided</scope>
         </dependency>
 
-
         <!-- Stream Ex -->
         <dependency>
             <groupId>one.util</groupId>
             <artifactId>streamex</artifactId>
             <version>0.8.1</version>
         </dependency>
-
 
         <!-- Apache Commons -->
         <dependency>
@@ -42,11 +40,20 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.11</version>
         </dependency>
+
+        <!-- Unit tests -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <finalName>parser</finalName>
         <sourceDirectory>src/main/java</sourceDirectory>
+        <testSourceDirectory>src/test/java</testSourceDirectory>
 
         <plugins>
             <plugin>
